--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,7 @@
 @theme{
   --font-montserrat: "Montserrat", sans-serif;
   --color-theme-gold: #D2AC71;
-  --color-theme-black: #121212
+  --color-theme-black: #121212;
 }
 
 @layer base {
