--- a/app/globals.css
+++ b/app/globals.css
@@ -9,6 +9,7 @@
   --font-montserrat: "Montserrat", sans-serif;
   --color-theme-gold: #D2AC71;
   --color-theme-black: #121212;
+  --color-theme-green: #286046;
 }
 
 @layer base {
